syntax = "proto3";

package api;
option csharp_namespace = "API";

import "Services/proto/empty.proto";
import "Services/proto/category.proto";
import "Services/proto/deliverable.proto";
import "Services/proto/social_network_provider.proto";

service ConfigurationService {
    // Requests client and config Version
    rpc GetVersions (Empty) returns (VersionInfo) {}

    // Requests a new AppConfig
    rpc GetAppConfig (Empty) returns (AppConfigData) {}

    // Streams image sets for display on the welcome page
    rpc GetWelcomeImages (Empty) returns (stream WelcomeImages) {}
}


message VersionInfo {
    /// If this is higher than the version of the client, the client must be updated
    int32 apiVersion = 1;
    int32 configVersion = 2;
}

message AppConfigData {
    int32 config_version = 1;

    ServiceConfig serviceConfig = 5;
    repeated Category categories = 6;
    repeated SocialNetworkProvider socialNetworkProviders = 7;
    repeated DeliverableIcon deliverableIcons = 8;

    string termsOfServiceUrl = 10;
    string privacyPolicyUrl = 11;

    bool userNeedInvitationToSignUp = 12;
}

message ServiceConfig {
    // MapBox
    string mapboxUrlTemplateDark = 1;
    string mapboxUrlTemplateLight = 2;
    string mapboxToken = 3;
}

message WelcomeImages {
    repeated string imageUrls = 1;
}
